istio/virtual-service/customers-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customers-virtual-service
  namespace: dev
spec:
  hosts:
  - customers-service
  http:
  # Rule 1: Retry cho các hành động đọc (GET)
  - match:
    - method:
        exact: GET
    route:
    - destination:
        host: customers-service
        port:
          number: 8081
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream"
  
  # Rule 2: Các hành động ghi (POST/PUT) -> Đi thẳng, không retry
  - route:
    - destination:
        host: customers-service
        port:
          number: 8081
